more work done on the track order page to style it correctly. Added order tracking form to top of banner image using frosted blur effect. Added transforms to the button in the form itself. Made iframe responsive as this was causing errors in page display when viewing on smaller screen sizes

--- a/index_style.css
+++ b/index_style.css
@@ -1,5 +1,6 @@
+
 body {
-    background-color: #F172a1;
+    background-color: #f7b3cc;
     
 }
 
@@ -12,7 +13,7 @@ img.medium{
 }
 
 .small{
-    height: 6em;
+    height: 6rem;
     padding-bottom: 10px;
 }
 
@@ -25,35 +26,22 @@ img.medium{
 
 .text{
     padding: 3rem;
-    background-color: #b39bc8;
+    background-color: #B3F7DE;
     border-radius: 15px;
-    color: #f0ebf4;
+    
 }
 
-/* div{
-    padding: 1rem;
-    border-radius: 15px;
-} */
+
 
 .sub:hover{
     cursor: pointer;
-    background-color: lime;
+    background-color: #EEF7B3;
     transition: background-color 500ms ease-in-out;
 }
 
 .navbar.scrolled {
-    background: rgb(222,192,222);
+    background: #BCB3F7;
     transition: background 250ms;
-}
-
-.navOption{
-    color: red;
-}
-
-div.map{
-    display: flexbox;
-    justify-content: center;
-    align-items: center;
 }
 
 .bannerImage{
@@ -61,7 +49,92 @@ div.map{
     background-image: url(imgs/donut.jpg);
     background-position: center;
     background-size: cover;
+    backdrop-filter: blur(5px);
     height: 405px;
+}
+
+.blur{
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    height: 405px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+input{
+    border-radius: 25px;
+    padding: .25em;
+    border: none;
+    text-align: center;
+}
+
+input:focus{
+    outline: none;
+    place
+}
+
+input:focus::placeholder{
+    color: transparent;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button[type="submit"]{
+    background-color: #EFEFEF;
+    background: linear-gradient(to left, #EFEFEF 50%, #B3F7DE 50%) right;
+    background-size: 300%;
+    background-repeat: no-repeat;
+    transition: 500ms ease-out;
+    padding: 1em;
+    border: none;
+    border-radius: 25px;
+}
+
+button[type="submit"]:hover{
+    background-position: left;
+    transform: scale(1.1, 1.1);
+}
+
+button[type="submit"]:focus{
+    transform: scale(1, 1);
+    outline: none;
+}
+
+
+
+
+div.map{
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    
+}
+
+iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
 
 @media (max-width: 992px){
@@ -72,7 +145,11 @@ div.map{
 
 }
 
-
+/* * {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  } */
 
 
 
